--- a/src/main/resources/templates/user/reset_pwd.html
+++ b/src/main/resources/templates/user/reset_pwd.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="/css/navStyles.css">
     <script src="/js/setReferrer.js" defer></script>
     <script type="text/javascript" src="/js/jquery-3.6.0.min.js"></script> <!-- JS 경로 수정 -->
+    <script type="text/javascript" src="/js/jquery.serializeObject.min.js"></script>
     <script src="/js/nav.js" defer></script>
     <script th:inline="javascript">
         let userId = /*[[${userId}]]*/ null;
@@ -18,6 +19,8 @@
         let SS_USER_ID = /*[[${session.SS_USER_ID}]]*/ null;
 
         $(document).ready(function () {
+
+            console.log("userId : ",userId);
 
             const segments = document.referrer.split("/");
             const referrer = segments[segments.length - 1];
@@ -29,7 +32,7 @@
             }
 
             // 세션 스토리지에서 저장된 아이디를 가져오기
-            if (referrer==="find_id" && userId!=="null"){
+            if ((referrer==="find_id"||referrer==="find_id?") && userId!=null){
                 document.getElementById('input_id').value = userId;
             }
 
@@ -41,21 +44,47 @@
 
 
             // 폼 제출 전 확인하는 함수
-            function validateForm(event) {
-                // 중복 확인이 완료되었으면 폼을 제출
-                const pwd = document.getElementById("input_pwd").value;
-                const pwd2 = document.getElementById("chk_pwd").value;
+            // function validateForm(event) {
+            //     // 중복 확인이 완료되었으면 폼을 제출
+            //     const pwd = document.getElementById("input_pwd").value;
+            //     const pwd2 = document.getElementById("chk_pwd").value;
+            //
+            //     if (pwd !== pwd2){
+            //         event.preventDefault();
+            //         alert("비밀번호와 비밀번호 확인에 입력된 값이\n일치하지 않습니다.");
+            //         return false;
+            //     }
+            //     return true;
+            // }
+            //
+            // // 회원가입 버튼 클릭 시 validateForm 실행
+            // document.getElementById('goToLogin').addEventListener('click', validateForm);
 
-                if (pwd !== pwd2){
-                    event.preventDefault();
-                    alert("비밀번호와 비밀번호 확인에 입력된 값이\n일치하지 않습니다.");
-                    return false;
+            $("#goToReset").on("click", function (){
+
+                const pwd = $("#input_pwd").val();
+                const pwd2 = $("#chk_pwd").val();
+
+                if (pwd != pwd2) {
+                    alert("비밀번호와 비밀번호 확인이 일치하지 않습니다.");
+                    return;
                 }
-                return true;
-            }
 
-            // 회원가입 버튼 클릭 시 validateForm 실행
-            document.getElementById('goToLogin').addEventListener('click', validateForm);
+                $.ajax({
+                    url: "/user/reset_pwd",
+                    type: "post", // 전송방식은 Post
+                    contentType: "application/json",
+                    dataType: "JSON", // 전송 결과는 JSON으로 받기
+                    data: JSON.stringify($("#resetPwdForm").serializeObject()), // form 태그 내 input 등 객체를 자동으로 전송할 형태로 변경하기
+                }).then(
+                    function (json) {
+                        alert(json.data.msg);
+                        if (json.data.result == 1) {
+                            window.location = "/user/index";
+                        }
+                    }
+                )
+            })
         });
     </script>
 </head>
@@ -90,7 +119,7 @@
             <div class="form_box">
                 <label class="label_bold" for="input_id">아이디 / ID</label>
                 <div class="input_box">
-                    <input type="text" class="input_info" id="input_id" name="id" placeholder="아이디를 입력하세요." required>
+                    <input type="text" class="input_info" id="input_id" name="userId" placeholder="아이디를 입력하세요." required>
                 </div>
             </div>
             <div class="form_box">
@@ -106,7 +135,7 @@
                 </div>
             </div>
             <div class="button_login_wrap">
-                <button type="submit" class="btn_reset_pwd" id="goToLogin">비밀번호 재설정</button>
+                <button type="button" class="btn_reset_pwd" id="goToReset">비밀번호 재설정</button>
             </div>
         </form>
     </div>
