--- a/src/main/resources/static/css/indexStyles.css
+++ b/src/main/resources/static/css/indexStyles.css
@@ -124,3 +124,11 @@ p {
         grid-template-columns: 1fr;
     }
 }
+
+.big-width {
+    width: 500px !important;
+}
+
+.big-height {
+    height: 600px !important;
+}
