--- a/src/main/resources/templates/user/delOrUpdate.html
+++ b/src/main/resources/templates/user/delOrUpdate.html
@@ -49,12 +49,12 @@
 </nav>
 
 <div class="container">
-    <a href="#" class="card">
+    <a href="#" class="card big-height big-width">
         <div class="icon">🤖</div>
         <h2>회원정보 수정</h2>
         <p>아이디, 닉네임, 식사루틴 등<br>회원정보를 수정합니다.</p>
     </a>
-    <a href="#" class="card">
+    <a href="#" class="card big-height big-width">
         <div class="icon">📍</div>
         <h2>회원 탈퇴</h2>
         <p>수집된 모든 정보를 삭제 후<br>회원 탈퇴합니다.</p>
