--- a/src/main/resources/templates/user/delInfo.html
+++ b/src/main/resources/templates/user/delInfo.html
@@ -48,7 +48,7 @@
             <a href="#" class="login" onclick="setReferrer()">로그인</a>
         </div>
         <div class="nav-group after_login same_width justify-right" id="afterLoginNav">
-            <a href="/user/delOrUpdate" style="font-size: x-large" title="마이페이지">👤</a>
+            <a href="/user/pwd_verification" class="nav-icon" title="마이페이지">👤</a>
             <a href="/user/logout" class="login">로그아웃</a>
         </div>
     </div>
