--- a/src/main/resources/templates/user/myPage.html
+++ b/src/main/resources/templates/user/myPage.html
@@ -27,20 +27,15 @@
 
     $(document).ready(function () {
 
-
-      // if (errorMsg && errorMsg.trim() !== "null"){
-      //   alert(errorMsg)
-      // }
-
       const referrer = document.referrer;
       const referrer_page = referrer.split('/').pop();
 
       console.log("referrer : "+referrer_page)
 
-      // if ((referrer_page!=="myPage")&&(referrer_page!=="pwd_verification")){
-      //   alert("올바르지 않은 접근입니다.")
-      //   window.location.href="/user/index";
-      // }
+      if (referrer_page!=="delOrUpdate"){
+        alert("올바르지 않은 접근입니다.")
+        window.location.href="/user/index";
+      }
 
       $("#nameDisplay").text(SS_USER_NAME);
       $("#genderDisplay").text(SS_USER_GENDER);
