--- a/src/main/resources/templates/user/signin.html
+++ b/src/main/resources/templates/user/signin.html
@@ -57,6 +57,8 @@
                     alert(json.data.msg);
                     if (json.data.result == 1) {
                         window.location = ref;
+                    }else{
+                        location.reload();
                     }
                 }
             )
