--- a/src/main/resources/templates/health/auth.html
+++ b/src/main/resources/templates/health/auth.html
@@ -13,7 +13,7 @@
     <script th:inline="javascript">
         let userId = /*[[${userId}]]*/ null;
         let error = /*[[${msg}]]*/ null;
-        let SS_USER_ID = /*[[${session.SS_USER_ID}]]*/ null;
+        let SS_USER = /*[[${session.SS_USER}]]*/ null;
         let ref = /*[[${ref}]]*/ null;
 
         function showModal(modalId, checkboxId) {
@@ -39,7 +39,7 @@
 
         $(document).ready(function () {
 
-            if (SS_USER_ID==null){
+            if (SS_USER==null){
                 alert("로그인 후 이용 가능힙니다.");
                 setReferrer();
             }
@@ -265,10 +265,10 @@
             <a href="#">AI 챗봇 상담</a>
             <a href="#">주변 약국 찾기</a>
         </div>
-        <div class="nav-group same_width justify-right" id="beforeLoginNav">
+        <div class="nav-group same_width justify-right" id="beforeLoginNav" th:if="${session.SS_USER == null}">
             <a href="#" class="login" onclick="setReferrer()">로그인</a>
         </div>
-        <div class="nav-group after_login same_width justify-right" id="afterLoginNav">
+        <div class="nav-group after_login same_width justify-right" id="afterLoginNav" th:if="${session.SS_USER != null}">
             <a href="/user/pwd_verification" class="nav-icon" title="마이페이지">👤</a>
             <a href="/user/logout" class="login">로그아웃</a>
         </div>
