--- a/src/main/resources/templates/user/delOrUpdate.html
+++ b/src/main/resources/templates/user/delOrUpdate.html
@@ -11,15 +11,12 @@
     <link href='//spoqa.github.io/spoqa-han-sans/css/SpoqaHanSans-jp.css' rel='stylesheet' type='text/css'>
     <script type="text/javascript" src="/js/jquery-3.6.0.min.js"></script> <!-- JS 경로 수정 -->
     <script src="/js/setReferrer.js" defer></script>
-    <script src="/js/nav.js" defer></script>
+
     <script th:inline="javascript">
         let userId = /*[[${userId}]]*/ null;
         let pwdVerifyResult = /*[[${pwdVerifyResult}]]*/ null;
-        let SS_USER_ID = /*[[${session.SS_USER_ID}]]*/ null;
 
         $(document).ready(function () {
-
-            console.log(SS_USER_ID);
 
             const segments = document.referrer.split("/");
             const referrer = segments[segments.length - 1];
@@ -61,7 +58,7 @@
                     type: "POST",
                     contentType: "application/json",
                     dataType: "JSON",
-                    data: JSON.stringify({userId : SS_USER_ID}), // x-www-form-urlencoded 방식
+                    data: JSON.stringify({userId : null}), // x-www-form-urlencoded 방식
                 }).then(
                     function (json){
                         alert(json.data.msg);
@@ -120,10 +117,10 @@
             <a href="#">AI 챗봇 상담</a>
             <a href="#">주변 약국 찾기</a>
         </div>
-        <div class="nav-group same_width justify-right" id="beforeLoginNav">
+        <div class="nav-group same_width justify-right" id="beforeLoginNav" th:if="${session.SS_USER == null}">
             <a href="#" class="login" onclick="setReferrer()">로그인</a>
         </div>
-        <div class="nav-group after_login same_width justify-right" id="afterLoginNav">
+        <div class="nav-group after_login same_width justify-right" id="afterLoginNav" th:if="${session.SS_USER != null}">
             <a href="/user/pwd_verification" class="nav-icon" title="마이페이지">👤</a>
             <a href="/user/logout" class="login">로그아웃</a>
         </div>
