--- a/src/main/resources/templates/user/myPage.html
+++ b/src/main/resources/templates/user/myPage.html
@@ -16,15 +16,10 @@
   <script src="/js/getExists.js" defer></script>
   <script src="/js/setReferrer.js" defer></script>
   <script src="/js/checkDuplicate.js" defer></script>
-  <script src="/js/nav.js" defer></script>
+
   <script th:inline="javascript">
     let userId = /*[[${userId}]]*/ null;
     let existYN = /*[[${existYN}]]*/ null;
-    let SS_USER_ID = /*[[${session.SS_USER_ID}]]*/ null;
-    let SS_USER_NAME = /*[[${session.SS_USER_NAME}]]*/ null;
-    let SS_USER_EMAIL = /*[[${session.SS_USER_EMAIL}]]*/ null;
-    let SS_USER_NICKNAME = /*[[${session.SS_USER_NICKNAME}]]*/ null;
-    let SS_USER_GENDER = /*[[${session.SS_USER_GENDER}]]*/ null;
 
     $(document).ready(function () {
 
@@ -33,16 +28,10 @@
 
       console.log("referrer : "+referrer_page)
 
-      if (SS_USER_ID === "" || referrer_page!=="delOrUpdate"){
+      if (referrer_page!=="delOrUpdate"){
         alert("올바르지 않은 접근입니다.")
         window.location.href="/user/index";
       }
-
-      $("#nameDisplay").text(SS_USER_NAME);
-      $("#genderDisplay").text(SS_USER_GENDER);
-      $("#userIdDisplay").text(SS_USER_ID);
-      $("#nicknameDisplay").text(SS_USER_NICKNAME);
-      $("#emailDisplay").text(SS_USER_EMAIL);
 
       $('#goToUpdate').on('click', function (event) {
         const birth = $('#birthDate').val().trim();
@@ -190,10 +179,10 @@
       <a href="#">AI 챗봇 상담</a>
       <a href="#">주변 약국 찾기</a>
     </div>
-    <div class="nav-group same_width justify-right" id="beforeLoginNav">
+    <div class="nav-group same_width justify-right" id="beforeLoginNav" th:if="${session.SS_USER == null}">
       <a href="#" class="login" onclick="setReferrer()">로그인</a>
     </div>
-    <div class="nav-group after_login same_width justify-right" id="afterLoginNav">
+    <div class="nav-group after_login same_width justify-right" id="afterLoginNav" th:if="${session.SS_USER != null}">
       <a href="/user/pwd_verification" class="nav-icon" title="마이페이지">👤</a>
       <a href="/user/logout" class="login">로그아웃</a>
     </div>
@@ -207,31 +196,31 @@
         <div class="info_box">
           <div><span>이름</span></div>
           <div>
-            <span id="nameDisplay"></span>
+            <span id="nameDisplay" th:text="${session.SS_USER.userName}"></span>
           </div>
         </div>
         <div class="info_box">
           <div><span>성별</span></div>
           <div>
-            <span id="genderDisplay"></span>
+            <span id="genderDisplay" th:text="${session.SS_USER.gender}"></span>
           </div>
         </div>
         <div class="info_box">
           <div><span>아이디</span></div>
           <div>
-            <span id="userIdDisplay"></span>
+            <span id="userIdDisplay" th:text="${session.SS_USER.userId}"></span>
           </div>
         </div>
         <div class="info_box">
           <div><span>닉네임</span></div>
           <div>
-            <span id="nicknameDisplay"></span>
+            <span id="nicknameDisplay" th:text="${session.SS_USER.userNickname}"></span>
           </div>
         </div>
         <div class="info_box">
           <div><span>이메일</span></div>
           <div>
-            <span id="emailDisplay"></span>
+            <span id="emailDisplay" th:text="${session.SS_USER.userEmail}"></span>
           </div>
         </div>
       </div>
